# AgentHER

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agenther/: __init__.py  cli.py  constants.py  data_augmenter.py  failure_detector.py  llm_client.py  models.py  outcome_extractor.py  pipeline.py  prompt_relabeler.py  prompts.py
configs/: default.yaml
examples/: example_trajectories.json  run_example.py
tests/: conftest.py  test_data_augmenter.py  test_failure_detector.py  test_models.py  test_outcome_extractor.py  test_pipeline.py
